--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1561,7 +1561,10 @@ form {
   margin: 0 0 16px; }
   .form-settings input {
     font-size: 16px;
-    font-weight: normal; }
+    font-weight: normal;
+    border: 1px solid #EEEEEE;
+    -webkit-box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.25);
+            box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.25); }
 
 .card-line {
   width: 100%;
