--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1228,7 +1228,9 @@ form
   input
     font-size: 16px
     font-weight: normal
-    
+    border: 1px solid #EEEEEE
+    box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.25)
+
 .card-line
   width: 100%
   border-radius: 8px
