--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1718,6 +1718,9 @@ form {
   z-index: 1;
   margin: -60px 0 -40px auto; }
 
+#copy {
+  display: none; }
+
 @media only screen and (max-width: 340px) {
   .card {
     width: 100px; }
