--- a/app/css/main.css
+++ b/app/css/main.css
@@ -383,6 +383,55 @@ a {
       -ms-flex-pack: start;
           justify-content: flex-start; }
 
+.level-box__number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(27, 161, 110, 0.53)), to(rgba(30, 152, 147, 0.76)));
+  background: linear-gradient(to bottom, rgba(27, 161, 110, 0.53) 0%, rgba(30, 152, 147, 0.76) 100%);
+  position: relative;
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), inset 0 1px 2px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), inset 0 1px 2px rgba(0, 0, 0, 0.25); }
+  .level-box__number:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../img/dot-btn.png") repeat center;
+    z-index: 1;
+    border-radius: inherit; }
+  .level-box__number span {
+    position: absolute;
+    background: -webkit-gradient(linear, left top, left bottom, from(#5fffa8), to(#e7f97b));
+    background: linear-gradient(to bottom, #5fffa8 0%, #e7f97b 100%);
+    width: calc(100% - 8px);
+    height: calc(100% - 8px);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: inherit;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+
 .lock-icon {
   width: 24px;
   height: 24px;
