--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1307,9 +1307,9 @@ form {
   max-width: 288px;
   width: 100%;
   margin: 0 auto;
-  height: 488px;
-  overflow: hidden;
-  color: #4F4F4F; }
+  min-height: 488px;
+  color: #4F4F4F;
+  position: relative; }
 
 .card-settings__photo {
   width: 100%;
@@ -1326,7 +1326,8 @@ form {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(-14.14%, #FFDF65), color-stop(123.06%, #FFFFFF));
   background: linear-gradient(180deg, #FFDF65 -14.14%, #FFFFFF 123.06%);
   position: relative;
-  overflow: hidden; }
+  overflow: hidden;
+  border-radius: 16px 16px 0 0; }
 
 .btn-delete {
   position: absolute;
@@ -1720,6 +1721,98 @@ form {
 
 #copy {
   display: none; }
+
+.line-wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  .line-wrapper .checkbox {
+    margin: 0;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content; }
+  .line-wrapper .checkbox-custom {
+    margin: 0;
+    background: #ffffff;
+    border: 2px solid #1C9C41; }
+  .line-wrapper .checkbox-inp:checked + .checkbox-custom {
+    background: #1C9C41; }
+
+.variable-letter-disable .card-product-word__box {
+  -webkit-box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.25);
+          box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.25);
+  background: #EEEEEE; }
+
+.overlay-bg {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.55; }
+
+.card-settings .variable-letter {
+  position: relative;
+  z-index: 1; }
+  .card-settings .variable-letter .card-product-word__box {
+    border: none; }
+
+.variable-letter-grey .card-product-word__box {
+  -webkit-box-shadow: none;
+          box-shadow: none; }
+
+.btn-next {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  bottom: 24px;
+  z-index: 1; }
+
+.btn-border-white {
+  color: #FFFFFF;
+  border: 2px solid #fff;
+    border-radius: 48px;
+  height: 44px;
+  max-width: 143px;
+  width: 100%; }
+
+.link-skip {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  z-index: 2;
+  color: #fff;
+  top: -34px; }
+
+.card-product-word__box {
+  position: relative; }
+  .card-product-word__box:hover .tooltip-box {
+    display: block;
+    text-transform: none;
+    letter-spacing: 0;
+    font-weight: normal;
+    font-size: 14px; }
+
+.body-bg {
+  background: url("../img/bg2.png") no-repeat center;
+    background-size: cover; }
+
+.video-wrapper {
+  position: relative; }
+
+.video-wrapper-img {
+  opacity: .5; }
 
 @media only screen and (max-width: 340px) {
   .card {
