--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1028,9 +1028,9 @@ form
   max-width: 288px
   width: 100%
   margin: 0 auto
-  height: 488px
-  overflow: hidden
+  min-height: 488px
   color: #4F4F4F
+  position: relative
 
 .card-settings__photo
   width: 100%
@@ -1041,6 +1041,7 @@ form
   background: linear-gradient(180deg, #FFDF65 -14.14%, #FFFFFF 123.06%)
   position: relative
   overflow: hidden
+  border-radius: 16px 16px 0 0
 
 .btn-delete
   position: absolute
@@ -1337,6 +1338,90 @@ form
 #copy
   display: none
 
+.line-wrapper
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: space-between
+  .checkbox
+    margin: 0
+    width: fit-content
+  .checkbox-custom
+    margin: 0
+    background: #ffffff
+    border: 2px solid #1C9C41
+  .checkbox-inp:checked + .checkbox-custom
+    background: #1C9C41
+
+.variable-letter-disable
+  .card-product-word__box
+    box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.25)
+    background: #EEEEEE
+
+.overlay-bg
+  position: fixed
+  left: 0
+  top: 0
+  z-index: 1
+  width: 100%
+  height: 100%
+  background: #000
+  opacity: 0.55
+
+.card-settings
+  .variable-letter
+    position: relative
+    z-index: 1
+    .card-product-word__box
+      border: none
+
+.variable-letter-grey
+  .card-product-word__box
+    box-shadow: none
+
+.btn-next
+  position: absolute
+  left: 50%
+  transform: translate(-50%,0)
+  bottom: 24px
+  z-index: 1
+
+.btn-border-white
+  color: #FFFFFF
+  border: 2px solid #fff
+    radius: 48px
+  height: 44px
+  max-width: 143px
+  width: 100%
+
+.link-skip
+  position: absolute
+  left: 50%
+  transform: translate(-50%,0)
+  z-index: 2
+  color: #fff
+  top: -34px
+
+.card-product-word__box
+  position: relative
+  &:hover
+    .tooltip-box
+      display: block
+      text-transform: none
+      letter-spacing: 0
+      font-weight: normal
+      font-size: 14px
+
+.body-bg
+  background: url("../img/bg2.png") no-repeat center
+    size: cover
+
+.video-wrapper
+  position: relative
+
+
+.video-wrapper-img
+  opacity: .5
 
 @import "media"
 // Всегда в конце
